# basic-sfml

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: collection.h  list.h  main.cpp  vector.h
